--- a/index.html
+++ b/index.html
@@ -5,7 +5,32 @@
     <link rel="shortcut icon" href="images/img-08.jpg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+<body class="b">
+    <h1>I am Tanim Khan</h1>
+    <small class="text-align">Web Designer</small> <br>
+    <br>
+   <div class="ancor-tags">
+    <a id="fb" target="_blank" href="https://www.facebook.com/tanim7652/">facebook <img src="images/facebooklogo.png" alt=""></a>
+    <a id="twi" target="_blank" href="https://twitter.com/Tani21Tanim">twitter <img src="images/twitterlogo.png" alt=""></a>
+    <a id="in" target="_blank" href="https://www.linkedin.com/">linkedin <img src="images/linklogo.png" alt=""></a>
+    <a id="insta" target="_blank" href="https://www.instagram.com/tanim_h.k/">instagram <img src="images/insta.png" alt=""></a>
+   </div>
+
+   <div class="portion-one">
+        <h1>About me</h1>
+        <div class="flexible-portion">
+            <div >
+                <img src="images/img-05.jpg" alt="">
+            </div>
+            <div >
+                <p id="first-writing">
+                    The pain itself is the love of the pain, the main ecological problems, but I give this kind of time to fall down, so that some great pain and pain. For the purpose of coming to a minimum, who of ours should exercise any employment except to take advantage of the consequences from it.
+                    <br>
+                    But the pain in the film is irure to condemn, in the pleasure it wants to escape from the pain of being clum in pain, none result. They are the exceptions the blinds yearn for, they do not see, they are the ones who abandon their responsibilities to the fault that is soothing the soul's hardships.
+                </p>    
+            </div>
+        </div>
+     
+    </div>
 </body>
 </html>
